📝 Mejorar diseño responsive agregando flex-col y flex-1 en páginas HTML
✨ Implementar layout flexible para mejor distribución del espacio
🐛 Corregir centrado de elementos en páginas de contacto y equipo

--- a/1ros auxilios.html
+++ b/1ros auxilios.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="src/styles/main.css">
   <script src="https://code.iconify.design/3/3.1.0/iconify.min.js"></script>
 </head>
-<body class="min-h-screen bg-gradient-to-br from-cyan-50 to-blue-50">
+<body class="min-h-screen bg-gradient-to-br from-cyan-50 to-blue-50 flex flex-col">
   <header class="fixed top-0 left-0 right-0 z-40 bg-gradient-to-r from-red-600 to-rose-600 shadow-lg">
     <div class="container mx-auto px-4 py-4">
       <div class="flex items-center justify-between">
@@ -42,7 +42,7 @@
       </ul>
     </div>
   </nav>
-  <main class="pt-24 pb-16">
+  <main class="flex-1 pt-24 pb-16">
     <div class="container mx-auto px-4">
       <div class="text-center mb-12 animate-fade-in-up">
         <h1 class="text-4xl md:text-5xl font-display font-bold gradient-text mb-4">Primeros Auxilios</h1>
