--- a/nosotros.html
+++ b/nosotros.html
@@ -11,7 +11,7 @@
   <script src="https://code.iconify.design/3/3.1.0/iconify.min.js"></script>
 </head>
 
-<body class="min-h-screen bg-gradient-to-br from-cyan-50 to-blue-50">
+<body class="min-h-screen bg-gradient-to-br from-cyan-50 to-blue-50 flex flex-col">
 
   <!-- Header / Navbar -->
   <header class="fixed top-0 left-0 right-0 z-40 bg-gradient-to-r from-teal-600 to-cyan-700 shadow-lg">
@@ -55,7 +55,7 @@
   </nav>
 
   <!-- Main Content -->
-  <main class="pt-24 pb-16">
+  <main class="flex-1 pt-24 pb-16 flex items-center">
     <div class="container mx-auto px-4">
 
       <!-- Page Title -->
@@ -67,7 +67,7 @@
       </div>
 
       <!-- Team Grid -->
-      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 max-w-6xl mx-auto">
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 max-w-6xl mx-auto justify-items-center">
 
         <!-- Team Member 1: Diego -->
         <div class="timeline-view animate-fade-in-up animate-range-[entry_0%_cover_30%]">
