--- a/vehiculos.html
+++ b/vehiculos.html
@@ -11,7 +11,7 @@
   <script src="https://code.iconify.design/3/3.1.0/iconify.min.js"></script>
 </head>
 
-<body class="min-h-screen bg-gradient-to-br from-cyan-50 to-blue-50">
+<body class="min-h-screen bg-gradient-to-br from-cyan-50 to-blue-50 flex flex-col">
 
   <!-- Header / Navbar -->
   <header class="fixed top-0 left-0 right-0 z-40 bg-gradient-to-r from-purple-600 to-pink-600 shadow-lg">
@@ -56,7 +56,7 @@
   </nav>
 
   <!-- Main Content -->
-  <main class="pt-24 pb-16">
+  <main class="flex-1 pt-24 pb-16">
     <div class="container mx-auto px-4">
 
       <!-- Page Title -->
